We make a bit more visible the placeholder, and we fix the alignment issue with the buttons

--- a/app/server/static/assets/css/annotation.css
+++ b/app/server/static/assets/css/annotation.css
@@ -350,3 +350,17 @@ body {
     min-width: 10%;
   }
 }
+
+/* We have to change the plcaeholder color since some people didn't understand what to do */
+::placeholder {
+  color: #c2c2c2 !important;
+  opacity: 1;
+}
+
+:-ms-input-placeholder { /* IE 10-11 */
+  color: #c2c2c2 !important;
+}
+
+::-ms-input-placeholder { /* Edge */
+  color: #c2c2c2 !important;
+}
